[explorer/frontend] fix: move down the toast notification, to avoid header overlaping

--- a/explorer/frontend/styles/globals.scss
+++ b/explorer/frontend/styles/globals.scss
@@ -151,6 +151,10 @@ a {
     }
 }
 
+.toast-container {
+    top: $spacing-header-height;
+}
+
 :root {
     --toastify-color-info: $color-info;
     --toastify-color-success: $color-success;
